checkAdmin
